
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_16__ TYPE_4__ ;
typedef struct TYPE_15__ TYPE_3__ ;
typedef struct TYPE_14__ TYPE_2__ ;
typedef struct TYPE_13__ TYPE_1__ ;


typedef int wchar_t ;
typedef int tmp ;
typedef int t ;
typedef int filename ;
typedef int args ;
typedef scalar_t__ UINT ;
struct TYPE_16__ {int (* Write ) (TYPE_4__*,int *) ;} ;
struct TYPE_15__ {char* member_0; int * member_4; int member_3; int member_2; int member_1; } ;
struct TYPE_14__ {int Rpc; } ;
struct TYPE_13__ {int Buffer; } ;
typedef TYPE_1__ RPC_READ_LOG_FILE ;
typedef TYPE_2__ PS ;
typedef TYPE_3__ PARAM ;
typedef int LIST ;
typedef TYPE_4__ CONSOLE ;


 int CmdEvalNotEmpty ;
 int CmdPrintError (TYPE_4__*,scalar_t__) ;
 int CmdPrompt ;
 int DumpBufW (int ,int *) ;
 scalar_t__ ERR_INTERNAL_ERROR ;
 scalar_t__ ERR_INVALID_PARAMETER ;
 scalar_t__ ERR_NO_ERROR ;
 int FreeParamValueList (int *) ;
 int FreeRpcReadLogFile (TYPE_1__*) ;
 int GetParamUniStr (int *,char*) ;
 int MAX_SIZE ;
 int * ParseCommandList (TYPE_4__*,char*,int *,TYPE_3__*,int) ;
 scalar_t__ ScMakeOpenVpnConfigFile (int ,TYPE_1__*) ;
 int UniEndWith (int *,char*) ;
 int UniFormat (int *,int,int ,int *) ;
 int UniStrCat (int *,int,char*) ;
 int UniStrCpy (int *,int,int ) ;
 int Zero (TYPE_1__*,int) ;
 int _UU (char*) ;
 int stub1 (TYPE_4__*,int *) ;

UINT PsOpenVpnMakeConfig(CONSOLE *c, char *cmd_name, wchar_t *str, void *param)
{
 LIST *o;
 PS *ps = (PS *)param;
 UINT ret = 0;
 RPC_READ_LOG_FILE t;

 PARAM args[] =
 {

  {"[ZIP_FileName]", CmdPrompt, _UU("CMD_OpenVpnMakeConfig_Prompt_ZIP"), CmdEvalNotEmpty, ((void*)0)},
 };

 o = ParseCommandList(c, cmd_name, str, args, sizeof(args) / sizeof(args[0]));
 if (o == ((void*)0))
 {
  return ERR_INVALID_PARAMETER;
 }

 Zero(&t, sizeof(t));


 ret = ScMakeOpenVpnConfigFile(ps->Rpc, &t);

 if (ret != ERR_NO_ERROR)
 {

  CmdPrintError(c, ret);
  FreeParamValueList(o);
  return ret;
 }
 else
 {

  wchar_t filename[MAX_SIZE];
  wchar_t tmp[MAX_SIZE];

  UniStrCpy(filename, sizeof(filename), GetParamUniStr(o, "[ZIP_FileName]"));

  if (UniEndWith(filename, L".zip") == 0)
  {
   UniStrCat(filename, sizeof(filename), L".zip");
  }

  if (DumpBufW(t.Buffer, filename) == 0)
  {
   ret = ERR_INTERNAL_ERROR;

   UniFormat(tmp, sizeof(tmp), _UU("CMD_OpenVpnMakeConfig_ERROR"), filename);
  }
  else
  {
   UniFormat(tmp, sizeof(tmp), _UU("CMD_OpenVpnMakeConfig_OK"), filename);
  }

  c->Write(c, tmp);

  FreeRpcReadLogFile(&t);
 }

 FreeParamValueList(o);

 return ret;
}
